# qtkeychain

./: .clang-format  .gitignore  .travis.yml  CMakeLists.txt  ChangeLog  INSTALL.txt  Jenkinsfile  QtKeychainConfig.cmake.in  ReadMe.md  ReadMe.txt  androidkeystore.cpp  androidkeystore_p.h  build.gradle  gnomekeyring.cpp  gnomekeyring_p.h  keychain.cpp  keychain.h  keychain.h.in  keychain_android.cpp  keychain_apple.mm  keychain_dbus.cpp  keychain_dbus_p.h  keychain_haiku.cpp  keychain_ios.mm  keychain_mac.cpp  keychain_p.h  keychain_unix.cpp  keychain_win.cpp  lib.pro  libsecret.cpp  qt5keychain.pri  qtkeychain.pri  qtkeychain.pro  qtkeychain.qbs  settings.gradle  testclient.cpp  testclient.pro
.github/workflows/: build.yml  wasm.yml
TestAppExample/: CMakeLists.txt  TestAppExample.pro  keychainclass.cpp  keychainclass.h  main.cpp  main.qml
autotest/: CMakeLists.txt  basic.cpp
build-osx/: qkeychain_export.h  qt_Qt5Keychain.pri
cmake/: android.toolchain.cmake  iOS.cmake
cmake/Modules/: ECMAddTests.cmake  ECMGeneratePriFile.cmake  ECMMarkAsTest.cmake  ECMMarkNonGuiExecutable.cmake  MSVCRuntime.cmake  QtVersionOption.cmake
debian/: changelog
gradle/wrapper/: gradle-wrapper.properties
qtkeychain/: CMakeLists.txt  androidkeystore.cpp  androidkeystore_p.h  gnomekeyring.cpp  gnomekeyring_p.h  keychain.cpp  keychain.h  keychain_android.cpp  keychain_apple.mm  keychain_haiku.cpp  keychain_p.h  keychain_unix.cpp  keychain_wasm.cpp  keychain_win.cpp  libsecret.cpp  libsecret_p.h  plaintextstore.cpp  plaintextstore_p.h
translations/: qtkeychain_de.ts  qtkeychain_fr.ts  qtkeychain_ka.ts  qtkeychain_ro.ts  qtkeychain_ru.ts  qtkeychain_sv.ts  qtkeychain_zh.ts
